# toka

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/Chat/: ChatHistorySidebar.tsx  ChatPanel.tsx  DebugLogPanel.tsx  MarkdownContent.tsx  SidebarFooter.tsx  ToolTrace.tsx
apps/desktop/src/components/Schedule/: ScheduleView.tsx  TaskList.tsx
apps/desktop/src/components/Settings/: SettingsPanel.tsx
apps/desktop/src/constants/: dida365.ts
apps/desktop/src/hooks/: useAgent.ts  useSettings.ts
apps/web/: index.html  package.json
apps/web/src/: App.tsx  index.css
docs/superpowers/plans/: 2026-06-20-toka-agent.md
docs/superpowers/specs/: 2026-06-20-toka-agent-design.md
scripts/: build-agent-sidecar.mjs  ensure-agent-sidecar.mjs
